--- a/lecture5/lecture5_pdf.html
+++ b/lecture5/lecture5_pdf.html
@@ -79,7 +79,6 @@ $$ \text{Labor force participation rate} = \frac{\text{Labor force}}{\text{Popul
 
 Data source: [The World Bank](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS)
 
-
 ---
 ### Employment to working age population ratio (E/pop)
 
@@ -110,15 +109,12 @@ Data source: [The World Bank](https://data.worldbank.org/indicator/SL.UEM.TOTL.Z
 
 
 
-
 ---
 ### Labor force participation rate and unemployment rate
 
 &lt;center&gt;
-&lt;img src="./lecture5_files/figure-html/lfpr_ur.svg" width="70%"/&gt;
+&lt;iframe src="./lecture5_files/figure-html/lfpr_ur.html" scrolling="no" style="width: 100%; height: 500px; border: 0px none;"&gt;&lt;/iframe&gt;
 &lt;/center&gt;
-
-
 
 ---
 ### Recall what we learned in the previous lectures
@@ -130,7 +126,7 @@ Data source: [The World Bank](https://data.worldbank.org/indicator/SL.UEM.TOTL.Z
 
 At the firm level
 
-- Wage setting: firms set wage sufficiently high to motiveate employees to exert high effort   
+- Wage setting: firms set wage sufficiently high to motivate employees to exert high effort   
 
 - Price setting: firms set a markup above the marginal cost of production to maximize profits  
 
@@ -157,7 +153,7 @@ Number of employees = f(&lt;span style="color:red"&gt;ouput&lt;/span&gt;, produc
 
 &lt;/center&gt;
 
-- Notice that unemployment rate, input to the nominal wage fuction, depends on the number of employees fuction.
+- Notice that unemployment rate, input to the nominal wage function, depends on the number of employees function.
 
  - Hence macroeconomics: actions/decisions of all agents in the economy are interrelated.
 
@@ -217,7 +213,6 @@ To achieve this goal
 ]
 
 
-
 ---
 ### Wage-setting curve
 .pull-left[
@@ -228,7 +223,7 @@ To achieve this goal
 
  - Example, at real wage = `\(w_L\)`. the unemployment rate is equal to 12%.
 
-- As wages increase, the unemployment rate decreases.
+- As unemployment rate decreases, real wage increases.
 
 ]
 
@@ -281,6 +276,8 @@ An example wage-setting curve
 
 - Given production, HR hires workers
 
+
+Using these decisions, we will derive the price-setting curve.
 ### Assumptions 
 
 - Labor is the only factor of production
@@ -299,14 +296,13 @@ An example wage-setting curve
 ### Price Setting curve
 
 .pull-left[
-
-- Notice that Wage curve is the marginal cost curve
+- To maximize profits, the firm produces at point B.
 
 - Markup, `\(\mu\equiv\frac{p^\ast-MC}{p^\ast} = \frac{p^\ast-W/\lambda}{p^\ast}\)`, where `\(p^\ast\)` is the firm price
 
  - Markup is a measure of market power
  
- - Remember that in a competitive market, `\(p^\ast=MC\)`, and hence firms don't have any market power
+ - Contrast this with a competitive market in which `\(p^\ast=MC\)`, and hence firms don't have any market power
  
 - Since all firms face the same demand curve, they all charge the same price, hence `\(p^\ast=P\)`, where `\(P\)` is the price of a bundle of the goods in the economy.
 
@@ -331,7 +327,7 @@ $$ \mu  = \frac{P-W/\lambda}{P} $$
 
 ### Price setting
 
-- We assume that the markup, `\(\mu\)` is determined by the market conditions such
+- We assume that the markup, `\(\mu\)`, is determined by the market conditions such
 
  - level of competetition in the market
  
@@ -341,13 +337,15 @@ $$ \mu  = \frac{P-W/\lambda}{P} $$
 
 - Real wage, `\(\frac{W}{P} = \lambda - \lambda \mu\)`, is independent of the employment level
 
+- Real wage is positively related to labor productivity, and inversely related to market power.
+
 - To better understand this point, read 
 
  - [Einstein: The elasticity of demand and the marginal revenue](https://core-econ.org/the-economy/book/text/07.html#einstein-the-elasticity-of-demand-and-the-marginal-revenue)
  
  - [Einstein: The price-setting curve](https://core-econ.org/the-economy/book/text/09.html#einstein-the-price-setting-curve)
 
- - Or, check out the last slide in this deck.
+ - Or, check out my [slides](./lecture5.html#price-math)
 ---
 name: back-normal
 
@@ -361,7 +359,7 @@ name: back-normal
  - labor productivity
 
 &lt;center&gt;
-&lt;img src="./lecture5_files/figure-html/Slide9.JPG" width="60%"/&gt;
+&lt;img src="./lecture5_files/figure-html/Slide9.jpg" width="50%"/&gt;
 &lt;/center&gt;
 
 
@@ -380,7 +378,7 @@ name: back-normal
  - Economy moves towards B 
 
 &lt;center&gt;
-&lt;img src="./lecture5_files/figure-html/Slide10.JPG" width="60%"/&gt;
+&lt;img src="./lecture5_files/figure-html/Slide10.jpg" width="50%"/&gt;
 &lt;/center&gt;
 
 ---
@@ -388,9 +386,15 @@ name: back-normal
 ### Labor market equilibrium
 
 .pull-left[
-- Intersection of the wage-setting curve and price-setting curve gives the equilibrium.
+- Intersection of the wage-setting curve and price-setting curve gives the Nash equilibrium.
  
  - Point `\(X\)` in the graph
+ - Firms pay the smallest wage to make workers exert sufficient effort
+ - Given the wage, employment is at the highest level
+ - Workers cannot ask more (firms will not pay more)
+ - Workers cannot put less effort (they will lose their jobs)
+ - Unemployed people cannot pursuade firms to hire them
+ - Firms cannot improve their profit by paying less wage or charging more.
  
 - In equilibrium, there is unemployment
 
@@ -404,6 +408,23 @@ name: back-normal
 &lt;img src="./lecture5_files/figure-html/Slide11.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
+
+---
+### Summary
+
+- We have learned the definitions of 
+ 
+ - labor force participation rate
+ 
+ - unemployment rate
+ 
+ - employment rate
+ 
+- We derived the wage-setting curve
+
+- We derived the price-setting curve
+
+- We characterized the labor market equilibrium using the above two
 
 ---
 
@@ -423,7 +444,6 @@ name: back-normal
 - Labor market policies
 
 - Labor unions
-
 
 
 ---
